2013-09-22  Paul Smith  <psmith@gnu.org>

	* guile.c (guile_gmake_setup): Don't initialize Guile so early.
	(func_guile): Lazily initialize Guile the first time the $(guile ..)
	function is invoked.  Guile can steal file descriptors which
	confuses our jobserver FD checking, so we don't want to initialize
	it before we have to.

	VMS port updates by Hartmut Becker <becker.ismaning@freenet.de>

	* makefile.com: Add output to the filelist.
	* output.c (va_copy): Add an implementation of this macro for VMS.
	* commands.c: Ensure filedef.h is #included before dep.h.
	* dir.c: Ditto.
	* file.c: Ditto.
	* guile.c: Ditto.
	* main.c: Ditto.
	* misc.c: Ditto.
	* read.c: Ditto.
	* rule.c: Ditto.
	* variable.c: Ditto.
	* readme.vms: Renamed to README.VMS and updates for this release.
	* Makefile.am: Ditto.
	* NEWS: Ditto.
	* README.template: Ditto.
	* Makefile.DOS.template: Ditto.

2013-09-21  Paul Smith  <psmith@gnu.org>

	* maintMakefile (check-alt-config): Create a target to test
	alternative configurations.  Each one will build make with a
	different configuration then run the test suite.

	Invert the output-sync #define to NO_OUTPUT_SYNC

	* configure.ac: Don't set OUTPUT_SYNC.
	* makeint.h: Ditto.
	* main.c: Use NO_OUTPUT_SYNC instead of OUTPUT_SYNC.
	* output.c: Ditto.
	* output.h: Ditto.
	* job.h: Ditto.
	* job.c: Ditto.
	* config.ami.template: Set NO_OUTPUT_SYNC.
	* config.h-vms.template: Ditto.
	* config.h.W32.template: Ditto.
	* configh.dos.template: Ditto.

	Output generated while reading makefiles should be synced.

	* main.c (make_sync): Define a context for syncing while reading
	makefiles and other top-level operations.
	(main): If we request syncing, enable it while we are parsing
	options, reading makefiles, etc. to capture that output.  Just
	before we start to run rules, dump the output if any.
	(die): Dump any output we've been syncing before we die
	* output.h (OUTPUT_SET): Disable output_context if not syncout.
