@@ -1,5 +1,9 @@
 2013-09-22  Paul Smith  <psmith@gnu.org>
 
+	* read.c (eval): If load_file() returns -1, don't add this to the
+	"to be rebuilt" list.
+	* doc/make.texi (load Directive): Document it.
+
 	* guile.c (guile_gmake_setup): Don't initialize Guile so early.
 	(func_guile): Lazily initialize Guile the first time the $(guile ..)
 	function is invoked.  Guile can steal file descriptors which
